--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "keywords": [
     "deep-browser-extension"
   ],
-  "version": "10.0.1",
+  "version": "0.0.2",
   "description": "deep-browser-extension",
   "repository": {
     "type": "git",
@@ -31,7 +31,7 @@
   "license": "Unlicense",
   "dependencies": {
     "@chakra-ui/react": "^2.7.1",
-    "@deep-foundation/deeplinks": "^0.0.218",
+    "@deep-foundation/deeplinks": "^0.0.222",
     "@deep-foundation/react-hasura": "^0.0.16",
     "@deep-foundation/store": "^0.0.21",
     "dotenv": "^16.3.1",
@@ -39,7 +39,8 @@
     "next": "^13.4.10",
     "next-env": "^1.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@deep-foundation/core": "^0.0.2"
   },
   "devDependencies": {
     "@atao60/fse-cli": "^0.1.7",
