--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "keywords": [
     "deep-browser-extension"
   ],
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "deep-browser-extension",
   "repository": {
     "type": "git",
@@ -40,6 +40,7 @@
     "next-env": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "@deep-foundation/capacitor-device": "~14.0.3",
     "@deep-foundation/core": "^0.0.2"
   },
   "devDependencies": {
