--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "keywords": [
     "deep-browser-extension"
   ],
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "deep-browser-extension",
   "repository": {
     "type": "git",
@@ -30,29 +30,29 @@
   ],
   "license": "Unlicense",
   "dependencies": {
-    "@chakra-ui/react": "^2.7.1",
+    "@chakra-ui/react": "~2.7.1",
     "@deep-foundation/capacitor-device": "~14.0.3",
-    "@deep-foundation/core": "^0.0.2",
-    "@deep-foundation/deeplinks": "^0.0.222",
-    "@deep-foundation/react-hasura": "^0.0.16",
-    "@deep-foundation/store": "^0.0.21",
-    "@deep-foundation/tsx": "^0.0.5",
-    "dotenv": "^16.3.1",
-    "dotenv-load": "^2.0.1",
-    "next": "^13.4.10",
-    "next-env": "^1.1.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@deep-foundation/core": "~0.0.2",
+    "@deep-foundation/deeplinks": "~0.0.222",
+    "@deep-foundation/react-hasura": "~0.0.16",
+    "@deep-foundation/store": "~0.0.21",
+    "@deep-foundation/tsx": "~0.0.5",
+    "dotenv": "~16.3.1",
+    "dotenv-load": "~2.0.1",
+    "next": "~13.4.10",
+    "next-env": "~1.1.1",
+    "react": "~18.2.0",
+    "react-dom": "~18.2.0"
   },
   "devDependencies": {
-    "@atao60/fse-cli": "^0.1.7",
-    "@capacitor/cli": "^5.0.0",
-    "@deep-foundation/npm-automation": "^18.1.10",
+    "@atao60/fse-cli": "~0.1.7",
+    "@capacitor/cli": "~5.0.0",
+    "@deep-foundation/npm-automation": "~18.1.10",
     "@types/chrome": "0.0.213",
-    "@types/fs-extra": "^11.0.1",
-    "@types/node": "^20.2.4",
-    "@types/react": "^18.0.1",
-    "fs-extra": "^11.1.1",
-    "typescript": "^4.9.5"
+    "@types/fs-extra": "~11.0.1",
+    "@types/node": "~20.2.4",
+    "@types/react": "~18.0.1",
+    "fs-extra": "~11.1.1",
+    "typescript": "~4.9.5"
   }
 }
