--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "keywords": [
     "deep-browser-extension"
   ],
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "deep-browser-extension",
   "repository": {
     "type": "git",
@@ -31,12 +31,12 @@
   "license": "Unlicense",
   "dependencies": {
     "@chakra-ui/react": "~2.7.1",
-    "@deep-foundation/capacitor-device": "~14.0.3",
+    "@deep-foundation/capacitor-device": "^20.0.3-dev.3",
     "@deep-foundation/core": "~0.0.2",
     "@deep-foundation/deeplinks": "~0.0.222",
     "@deep-foundation/react-hasura": "~0.0.16",
     "@deep-foundation/store": "~0.0.21",
-    "@deep-foundation/tsx": "~0.0.5",
+    "@deep-foundation/tsx": "^0.0.5",
     "dotenv": "~16.3.1",
     "dotenv-load": "~2.0.1",
     "next": "~13.4.10",
